# wirio

./: 404.html  AGENTS.md  README.md  index.html  objects.inv  pyproject.toml
.github/workflows/: _publish_documentation.yaml  _test.yaml  pull_request.yaml  release.yaml
advanced-features/auto-activated-services/: index.html
advanced-features/get-all-services-of-a-type/: index.html
advanced-features/interfaces-and-abstract-classes/: index.html
advanced-features/keyed-services/: index.html
advanced-features/service-validation/: index.html
api-reference/base-service-provider/: index.html
api-reference/exceptions/: index.html
api-reference/host-environment/: index.html
api-reference/keyed-service/: index.html
api-reference/service-collection/: index.html
api-reference/service-container/: index.html
api-reference/service-provider/: index.html
api-reference/service-provider-is-keyed-service/: index.html
api-reference/service-provider-is-service/: index.html
api-reference/service-scope/: index.html
api-reference/service-scope-factory/: index.html
api-reference/settings_manager/: index.html
core-concepts/async-first-design/: index.html
core-concepts/environments/: index.html
core-concepts/factories/: index.html
core-concepts/lifetimes/: index.html
core-concepts/pluggable-architecture/: index.html
core-concepts/settings/: index.html
docs/: mkdocs.yml
docs/code/: quickstart.py
docs/pages/: index.md  testing.md
docs/pages/api-reference/: settings_manager.md
docs/pages/core-concepts/: configuration.md  environments.md  pluggable-architecture.md  settings.md
docs/pages/getting-started/: quickstart.md
docs/pages/integrations/: sqlmodel.md
docs/pages/other/: changelogs.md
getting-started/installation/: index.html
getting-started/quickstart/: index.html
integrations/fastapi/: index.html
integrations/sqlmodel/: index.html
other/changelogs/: index.html
search/: search_index.json
src/wirio/: __init__.py  _content_root_path_resolver.py  annotations.py  service_collection.py
src/wirio/_service_lookup/: _async_concurrent_dictionary.py  _typed_type.py
testing/: index.html
tests/: test_service_collection.py
tests/_service_lookup/: test_typed_type.py
tests/configuration/: test_configuration_manager.py  test_configuration_provider.py  test_configuration_section.py
tests/hosting/: test_host_environment.py
tests/integrations/: test_fastapi_dependency_injection.py
tests/settings/: test_convention_changer.py  test_settings_binder.py  test_settings_manager.py  test_settings_provider.py  test_settings_section.py
tests/utils/: test_extra_dependencies.py
(+50 files in other folders)
