[project]
name = "wirio"
version = "0.18.0"
description = "Powerful Dependency Injection with Python"
authors = [{ name = "Andreu Codina" }]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3.13",
    "Intended Audience :: Developers",
]
keywords = [
    "dependency injection",
    "di",
    "inversion of control",
    "ioc",
    "fastapi",
]
requires-python = ">=3.13"
dependencies = ["pydantic>=2.12.5"]

[project.urls]
Homepage = "https://github.com/wirio-org/wirio"
Repository = "https://github.com/wirio-org/wirio"
Documentation = "https://wirio-org.github.io/wirio"
Changelog = "https://github.com/wirio-org/wirio/releases"

[project.optional-dependencies]
fastapi = ["fastapi[standard-no-fastapi-cloud-cli]>=0.118.0"]
sqlmodel = ["greenlet>=3.3.1", "sqlmodel>=0.0.33"]
azure-key-vault = [
    "aiohttp>=3.13.3",
    "azure-identity>=1.25.2",
    "azure-keyvault-secrets>=4.10.0",
]
aws-secrets-manager = ["boto3[crt]>=1.42.71"]

[dependency-groups]
dev = [
    "asyncpg>=0.31.0",
    "coverage>=7.13.4",
    "jupyter>=1.1.1",
    "mkdocs-material>=9.7.6",
    "mkdocstrings-python>=2.0.3",
    "psycopg2-binary>=2.9.11",
    "pyright[nodejs]>=1.1.408",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.7",
    "testcontainers[postgres]>=4.14.1",
    "ty>=0.0.24",
]

[build-system]
requires = ["uv_build>=0.10.7,<0.11.0"]
build-backend = "uv_build"

[tool.uv]
required-version = ">=0.10.7,<0.11.0"

[tool.pyright]
typeCheckingMode = "strict"

[tool.ty.terminal]
error-on-warning = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812", # missing-trailing-comma
    "D100",   # undocumented-public-module
    "D101",   # undocumented-public-class
    "D102",   # undocumented-public-method
    "D103",   # undocumented-public-function
    "D104",   # undocumented-public-package
    "D105",   # undocumented-magic-method
    "D106",   # undocumented-public-nested-class
    "D107",   # undocumented-public-init
    "E501",   # line-too-long
    "ICN",    # flake8-import-conventions
    "S101",   # assert
    "TRY003", # raise-vanilla-args
    "FBT001", # boolean-type-hint-positional-argument
    "FBT002", # boolean-default-value-positional-argument
    "PT013",  #	pytest-incorrect-pytest-import
]

[tool.pytest]
strict = true
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
